--- a/scss/biscuit/biscuit/_watch_page.scss
+++ b/scss/biscuit/biscuit/_watch_page.scss
@@ -12,7 +12,7 @@
 .watch-box {
   background: $content-box-background-color;
   border: 1px solid $content-box-border-color;
-  padding: $context-box-padding;
+  padding: $content-box-padding;
   overflow: hidden;
   word-break: break-word;
 
