--- a/scss/biscuit/biscuit/_content_box.scss
+++ b/scss/biscuit/biscuit/_content_box.scss
@@ -7,7 +7,7 @@
 {
     border: 1px solid $content-box-border-color;
     background: $content-box-background-color;
-    padding: $context-box-padding;
+    padding: $content-box-padding;
     overflow: hidden;
     word-break: break-word;
 
