--- a/scss/biscuit/biscuit/_profile_page.scss
+++ b/scss/biscuit/biscuit/_profile_page.scss
@@ -1,7 +1,7 @@
 .profile-box {
   display: flex;
   padding: 8px;
-  height: $profile-intro-height;
+  min-height: $profile-intro-height;
 
   &.centered {
     text-align: center
