profile.twig fix + some biscuit stuff

--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -1,5 +1,7 @@
 {% extends "_layout_profile.twig" %}
 
+{% set banner_picture = profile_banner(data.author.info.username) %}
+
 {% set title = data.username %}
 
 {% set opengraph_type = "profile" %}
