--- a/scss/biscuit/biscuit/_sections.scss
+++ b/scss/biscuit/biscuit/_sections.scss
@@ -8,6 +8,10 @@
       align-self: center;
       margin: 0;
       flex-grow: 1;
+      @if $theme == "cubicle" {
+        color: #4e9a06;
+        font-family: "Trebuchet MS", $font;
+      }
     }
 
     a {
