--- a/scss/biscuit/biscuit/_imports.scss
+++ b/scss/biscuit/biscuit/_imports.scss
@@ -1,3 +1,7 @@
+// bootstrap icons
+$bootstrap-icons-font-dir: "/assets" !default;
+@import "../../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
+
 @import 'mixins/responsiveness';
 @import 'mixins/gradients';
 
@@ -9,3 +13,143 @@
 
 @import 'page';
 @import 'grid_system';
+
+// misc unorganized shit
+:root {
+  font-family: $font;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body
+{
+  @if $theme == "cubicle" {
+    background: #333333
+  } @else {
+    background: #F5F5F5;
+  }
+  color: #333;
+  font-size: small;
+  padding: 0;
+  margin: 0;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+a
+{
+  text-decoration: none;
+  color: $link-color;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:focus {
+    outline: 1px dotted;
+  }
+}
+
+img
+{
+  border: 0;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 24px;
+}
+
+h2 { font-size: 20px; }
+
+h3 { font-size: 16px; }
+
+h4 { font-size: 14px; }
+
+h5 { font-size: 12px; }
+
+h6 { font-size: 10px; }
+
+img.img-responsive {
+  width: 100%;
+}
+
+.label {
+  font-weight: bold;
+  color: #666;
+}
+
+.clear {
+  clear: both;
+}
+
+textarea,
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"] {
+  border: 1px solid darken($content-box-border-color, 1%);
+  background-color: lighten($content-box-background-color, 3.5%);
+  color: #000;
+  transition: border linear 0.3s;
+  border-radius: 3px;
+  padding: 6px;
+  font-family: $font;
+
+  &:focus {
+    border-color: $primary;
+    outline: none;
+  }
+}
+
+code {
+  color: #e83e3e;
+}
+
+pre {
+  background-color: #ffe8e8;
+  border: 1px solid #eed1d1;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0;
+  overflow-x: auto;
+  line-height: 1.5;
+  white-space: pre-wrap;
+}
+
+blockquote {
+  margin: 0 0 0.5em 0;
+  padding-left: 0.8em;
+  border-left: 4px solid $content-box-border-color;
+}
+
+.pfp {
+  border: 1px solid rgba(black, 0.2);
+}
+
+hr {
+  border: 0;
+  border-bottom: 1px solid $content-box-border-color;
+  height: 0;
+  margin: 10px 0;
+  &.taller {
+    margin: 25px 0;
+  }
+}
+
+.userlink-handle {
+  color: #aaa;
+  text-decoration: none;
+}
+
+.fade {
+  color: #888;
+}
+
+.flex {
+  display: flex;
+}
