--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -1,6 +1,6 @@
 {% extends "_layout_profile.twig" %}
 
-{% set banner_picture = profile_banner(data.author.info.username) %}
+{% set banner_picture = profile_banner(data.username) %}
 
 {% set title = data.username %}
 
