--- a/private/skins/biscuit/templates/read_journal.twig
+++ b/private/skins/biscuit/templates/read_journal.twig
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block content %}
-	<div class="content-box no-border-top">
+	<div class="content-box">
 		<h1>{{ data.title }}</h1>
 		<p>By {{ user_link(data.author) }}, {{ data.published | relative_time }}</p>
 		{{ data.contents | markdown_user_journal }}
