--- a/scss/biscuit/biscuit/_header.scss
+++ b/scss/biscuit/biscuit/_header.scss
@@ -23,8 +23,24 @@
       align-items: center;
 
       &:hover, &.selected {
-        background: rgba(white, 0.1);
         cursor: pointer;
+      }
+
+      @if $theme == "biscuit" {
+        &:hover, &.selected {
+          background: rgba(white, 0.1);
+        }
+      }
+
+      @if $theme == "cubicle" {
+        background: #64b713;
+        border-left: 1px solid #4e9e00;
+        border-right: 1px solid #4e9e00;
+
+        &.selected {
+          background: #2e2e2e;
+          color: #76b900;
+        }
       }
 
       .user-menu-pfp {
@@ -172,8 +188,13 @@ td.h
   }
 
   width: 100%;
-  background: linear-gradient(to bottom, #333, #111);
-  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  @if $theme == "cubicle" {
+    background: #4e9a06;
+    font-family: "Trebuchet MS", $font;
+  } @else {
+    background: linear-gradient(to bottom, #333, #111);
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  }
   height: $header-height;
   display: flex;
 }
