some more stuff to start, update chaziz svg

--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -68,7 +68,7 @@
                             {% else %}
                                 <p>Insert slogan.</p>
                             {% endif %}
-                            <a href="/register.php" class="button button-get-started button-big">Get started ›</a>
+                            <a href="/register" class="button button-get-started button-big">Get started ›</a>
                         </div>
                     {% endif %}
                 </div>
