--- a/private/skins/biscuit/templates/login.twig
+++ b/private/skins/biscuit/templates/login.twig
@@ -23,10 +23,13 @@
                             <input type="password" name="password" class="form-submit" placeholder="Password">
                         </div>
 
+                        {# TODO #}
+                        {% if not areWeRunningTheNewCode %}
                         <div class="form-input">
                             <input type="checkbox" name="remember_me" id="remember_me">
                             <label for="remember_me">Remember me (for up to a year)</label>
                         </div>
+                        {% endif %}
 
                         <div class="form-button-container">
                             <input type="submit" class="button button-primary" value="Login" name="loginsubmit">
