--- a/private/skins/biscuit/templates/components/default/footer.twig
+++ b/private/skins/biscuit/templates/components/default/footer.twig
@@ -1,21 +1,26 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-content">
-            <div>Running <a href="/version">OpenSB {{ opensb_version }}</a></div>
-            <span><a href="/theme">Change theme</a></span>
-            <span><a href="/rules">Rules</a></span>
-            <span><a href="/tos">Terms of Service</a></span>
-            <span><a href="/privacy">Privacy policy</a></span>
-            <span>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</span>
-            {% if is_chaziz_sb %}
-                <div class="footer-logo-chaziz">
-                    <a href="https://bluffingo.net/">
-                        <img src="/assets/sb_branding/chaziz.svg" alt="Chaziz">
-                    </a>
-                </div>
-            {% endif %}
-            {% if is_debug %}
-                <p>{{ profiler_stats() }}</p>
+            {% if areWeRunningTheNewCode %}
+                <div>Running <a href="/version">OpenSB Theseus</a></div>
+                <span>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</span>
+            {% else %}
+                <div>Running <a href="/version">OpenSB {{ opensb_version }}</a></div>
+                <span><a href="/theme">Change theme</a></span>
+                <span><a href="/rules">Rules</a></span>
+                <span><a href="/tos">Terms of Service</a></span>
+                <span><a href="/privacy">Privacy policy</a></span>
+                <span>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</span>
+                {% if is_chaziz_sb %}
+                    <div class="footer-logo-chaziz">
+                        <a href="https://bluffingo.net/">
+                            <img src="/assets/sb_branding/chaziz.svg" alt="Chaziz">
+                        </a>
+                    </div>
+                {% endif %}
+                {% if is_debug %}
+                    <p>{{ profiler_stats() }}</p>
+                {% endif %}
             {% endif %}
         </div>
     </div>
