--- a/private/skins/bootstrap/templates/version.twig
+++ b/private/skins/bootstrap/templates/version.twig
@@ -33,10 +33,10 @@
                 <a href="/http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
             </p>
             <p>
-                You can download the OpenSB source code <a href="/https://github.com/bluffingo/OpenSB">here</a>.
+                You can find the OpenSB source code on GitHub <a href="/https://github.com/bluffingo/OpenSB">here</a>.
             </p>
             <p>
-                Special thanks <a href="/version/special_thanks/">here</a>.
+                You can find the special thanks <a href="/version/special_thanks/">here</a>.
             </p>
             <hr>
             <h2>Installed software</h2>
@@ -73,40 +73,6 @@
                                     {% endfor %}
                                 </ul>
                             </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <hr>
-            <h2>Installed libraries</h2>
-            <table class="table">
-                <tr class="h">
-                    <th>Library</th>
-                    <th>Version</th>
-                    <th>License</th>
-                    <th>Description</th>
-                    <th>Authors</th>
-                </tr>
-                {% for key, package in data.composer_packages %}
-                    <tr>
-                        <td class="a" width="200">{{ key }}</td>
-                        <td class="b" width="100">{{ package.version }}</td>
-                        <td class="b" width="75">
-                            {% for license in package.licenses %}
-                                {{ license }}{{ not loop.last ? ',' }}
-                            {% endfor %}
-                        </td>
-                        <td class="b">
-                            {{ package.description }}
-                        </td>
-                        <td class="b">
-                            {% for author in package.authors %}
-                                {% if author.homepage %}
-                                    <a href="/{{ author.homepage }}">{{ author.name }}</a>{{ not loop.last ? ',' }}
-                                {% else %}
-                                    {{ author.name }}{{ not loop.last ? ',' }}
-                                {% endif %}
-                            {% endfor %}
                         </td>
                     </tr>
                 {% endfor %}
