update version page

--- a/private/skins/biscuit/templates/version.twig
+++ b/private/skins/biscuit/templates/version.twig
@@ -8,75 +8,57 @@
             <h1>Version</h1>
         </div>
         <div class="content-box">
-            <p>
-                This website is powered by OpenSB. © 2021-{{ 'now' | date('Y') }}
-                {% for developer in data.developers %}
-                    {{ developer }}{{ not loop.last ? ',' }}
-                {% endfor %} and others.
-            </p>
-            <p>
-                OpenSB is free software: you can redistribute it and/or modify
-                it under the terms of the GNU Affero General Public License as
-                published by the Free Software Foundation, either version 3 of the
-                License, or (at your option) any later version.
-            </p>
-            <p>
-                OpenSB is distributed in the hope that it will be useful,
-                but WITHOUT ANY WARRANTY; without even the implied warranty of
-                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-                GNU Affero General Public License for more details.
-            </p>
-            <p>
-                You should have received
-                <a href="/license">a copy of the GNU Affero General Public License</a>
-                along with this program. If not, see
-                <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
-            </p>
-            <p>
-                You can find the OpenSB source code on GitHub <a href="/https://github.com/bluffingo/OpenSB">here</a>.
-            </p>
-            <p>
-                You can find the special thanks <a href="/version/special_thanks/">here</a>.
-            </p>
-            <hr>
-            <h2>Installed software</h2>
-            <table class="c1">
-                <tr class="h">
-                    <th>Product</th>
-                    <th>Version</th>
-                </tr>
-                {% for thing in data.software %}
-                    <tr>
-                        <td class="a">{{ thing.title }}</td>
-                        <td class="b">{{ thing.info }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <hr>
-            <h2>Installed skins</h2>
-            <table class="c1">
-                <tr class="h">
-                    <th>Skin/Author</th>
-                    <th>Description</th>
-                </tr>
-                {% for skin in skins %}
-                    <tr>
-                        <td class="a">{{ skin.metadata.name }}<br><small>by {{ skin.metadata.author }}</small></td>
-                        <td class="b">
-                            <div>
-                            {{ skin.metadata.description }}
-                            </div>
-                            <div>
-                                <ul>
-                                    {% for theme in skin.metadata.themes %}
-                                        <li>{{ theme.name }}: {{ theme.description }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
+            <div class="grid">
+                <div class="col-4 col-version">
+                    <img src="/assets/chaz_opensb.png" class="img-version">
+                </div>
+                <div class="col-8">
+                    <p>
+                        This website is powered by OpenSB. © 2021-{{ 'now' | date('Y') }}
+                        {% for developer in data.developers %}
+                            {{ developer }}{{ not loop.last ? ',' }}
+                        {% endfor %} and others.
+                    </p>
+                    <p>
+                        OpenSB is free software: you can redistribute it and/or modify
+                        it under the terms of the GNU Affero General Public License as
+                        published by the Free Software Foundation, either version 3 of the
+                        License, or (at your option) any later version.
+                    </p>
+                    <p>
+                        OpenSB is distributed in the hope that it will be useful,
+                        but WITHOUT ANY WARRANTY; without even the implied warranty of
+                        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+                        GNU Affero General Public License for more details.
+                    </p>
+                    <p>
+                        You should have received
+                        <a href="/license">a copy of the GNU Affero General Public License</a>
+                        along with this program. If not, see
+                        <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
+                    </p>
+                    <p>
+                        You can find the OpenSB source code on GitHub <a href="/https://github.com/bluffingo/OpenSB">here</a>.
+                    </p>
+                    <p>
+                        You can find the special thanks <a href="/version/special_thanks/">here</a>.
+                    </p>
+                    <hr>
+                    <h2>Installed software</h2>
+                    <table class="c1">
+                        <tr class="h">
+                            <th>Software</th>
+                            <th>Version</th>
+                        </tr>
+                        {% for thing in data.software %}
+                            <tr>
+                                <td class="a">{{ thing.title }}</td>
+                                <td class="b">{{ thing.info }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
