--- a/private/skins/bootstrap/templates/version.twig
+++ b/private/skins/bootstrap/templates/version.twig
@@ -42,38 +42,13 @@
             <h2>Installed software</h2>
             <table class="table">
                 <tr class="h">
-                    <th>Product</th>
+                    <th>Software</th>
                     <th>Version</th>
                 </tr>
                 {% for thing in data.software %}
                     <tr>
                         <td class="a">{{ thing.title }}</td>
                         <td class="b">{{ thing.info }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <hr>
-            <h2>Installed skins</h2>
-            <table class="table">
-                <tr class="h">
-                    <th>Skin/Author</th>
-                    <th>Description</th>
-                </tr>
-                {% for skin in skins %}
-                    <tr>
-                        <td class="a">{{ skin.metadata.name }}<br><small>by {{ skin.metadata.author }}</small></td>
-                        <td class="b">
-                            <div>
-                                {{ skin.metadata.description }}
-                            </div>
-                            <div>
-                                <ul>
-                                    {% for theme in skin.metadata.themes %}
-                                        <li>{{ theme.name }}: {{ theme.description }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </td>
                     </tr>
                 {% endfor %}
             </table>
