--- a/scss/biscuit/biscuit/_login_register_page.scss
+++ b/scss/biscuit/biscuit/_login_register_page.scss
@@ -26,3 +26,11 @@ body.login {
     }
   }
 }
+
+// FIXME: on theseus, the page classes do not get applied, so the login and register pages remain wide.
+.container {
+  &.login, &.register {
+    margin: auto;
+    width: 310px;
+  }
+}
