fix login/register banners + hide incomplete skins on prod

--- a/private/skins/biscuit/templates/_layout_login.twig
+++ b/private/skins/biscuit/templates/_layout_login.twig
@@ -25,6 +25,7 @@
 <div class="page">
     <div class="page-contents">
         <div class="container {{ page_name }}">
+            {{ include(component('banners')) }}
             {% block content %}{% endblock %}
         </div>
     </div>
