--- a/private/skins/biscuit/templates/components/default/header.twig
+++ b/private/skins/biscuit/templates/components/default/header.twig
@@ -1,9 +1,15 @@
+{% if current_theme == 'pink' %}
+    {% set logo = website_branding.assets_location ~ '/logo-wordmark.png' %}
+{% else %}
+    {% set logo = website_branding.assets_location ~ '/logo-wordmark-dark.png' %}
+{% endif %}
+
 <div class="headers">
     <div class="header">
         <div class="header-container">
             <div class="header-logo">
                 <a href="/">
-                    <img alt="{{ website_branding.name }}" class="logo" src="{{ website_branding.assets_location }}/logo-wordmark-dark.png">
+                    <img alt="{{ website_branding.name }}" class="logo" src="{{ logo }}">
                     <img alt="{{ website_branding.name }}" class="logo-small" src="{{ website_branding.assets_location }}/logo.png">
                 </a>
             </div>
