--- a/private/skins/biscuit/templates/theme.twig
+++ b/private/skins/biscuit/templates/theme.twig
@@ -11,7 +11,7 @@
             <div class="col-4">
                 <div id="previewContainer">
                     <img id="themePreview" src="" alt="Theme Preview" style="max-width: 100%;">
-                    <p id="themeDescription"></p>
+                    <p id="themeDescription"></p><p id="themeAuthor"></p>
                 </div>
             </div>
             <div class="col-8">
@@ -23,7 +23,7 @@
                                 {% for theme in skin.metadata.themes %}
                                     <option value="{{ skin.metadata.id }},{{ theme.id }}"
                                             data-preview-url="/assets/previews/{{ skin.metadata.id }}_{{ theme.id }}.png"
-                                            data-description="{{ theme.description }}">
+                                            data-description="{{ theme.description }}" data-author="{{ theme.author }}">
                                         {{ skin.metadata.name }}: {{ theme.name }}
                                     </option>
                                 {% endfor %}
