--- a/private/skins/finalium/templates/theme.twig
+++ b/private/skins/finalium/templates/theme.twig
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <div id="previewContainer">
                 <img id="themePreview" src="" alt="Theme Preview" style="max-width: 100%;">
-                <p id="themeDescription"></p>
+                <p id="themeDescription"></p><p id="themeAuthor"></p>
             </div>
         </div>
         <div class="col-md-6">
@@ -20,7 +20,7 @@
                             {% for theme in skin.metadata.themes %}
                                 <option value="{{ skin.metadata.id }},{{ theme.id }}"
                                         data-preview-url="/assets/previews/{{ skin.metadata.id }}_{{ theme.id }}.png"
-                                        data-description="{{ theme.description }}">
+                                        data-description="{{ theme.description }}" data-author="{{ theme.author }}">
                                     {{ skin.metadata.name }}: {{ theme.name }}
                                 </option>
                             {% endfor %}
