--- a/scss/biscuit/biscuit/_header.scss
+++ b/scss/biscuit/biscuit/_header.scss
@@ -50,7 +50,10 @@
       .user-menu-caret-container {
         display: inline-block;
         font-size: 10px;
-        color: #7B7B7B;
+        color: rgba(255, 255, 255, 0.75);
+        @if $theme == "pink" {
+          color: rgba(0, 0, 0, 0.75);
+        }
       }
     }
   }
@@ -117,15 +120,26 @@ form.header-search
     color: #eee;
     background: #575757;
     box-shadow: 0 1px 0 #333;
-
     padding: 6px 40px 6px 6px;
-
     height: 30px;
+
+    @if $theme == "pink" {
+      background: #ffe0e0;
+      border: #ff7c7c solid 1px;
+      color: #444;
+      box-shadow: none;
+    }
 
     &:focus {
       background: #eee;
       color: #222;
-      box-shadow: 0 1px 0 #000;
+      box-shadow: 0 1px 0 #ff6d6d;
+      @if $theme == "pink" {
+        background: #ffe0e0;
+        border: #ff7c7c solid 1px;
+        box-shadow: #ff6d6d 0 1px 5px;
+        color: #111;
+      }
     }
   }
 
@@ -166,6 +180,10 @@ td.h
   margin: 0 6px;
   font-weight: bold;
 
+  @if $theme == "pink" {
+    color: black;
+  }
+
   &.username {
     display: none;
 
@@ -188,13 +206,18 @@ td.h
   }
 
   width: 100%;
+  background: linear-gradient(to bottom, #333, #111);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+
   @if $theme == "cubicle" {
     background: #4e9a06;
     font-family: "Trebuchet MS", $font;
-  } @else {
-    background: linear-gradient(to bottom, #333, #111);
-    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
   }
+
+  @if $theme == "pink" {
+    background: linear-gradient(to bottom, #ffc2c2, #FF9A9A);
+  }
+
   height: $header-height;
   display: flex;
 }
