--- a/scss/biscuit/biscuit/_jumbotron.scss
+++ b/scss/biscuit/biscuit/_jumbotron.scss
@@ -5,8 +5,12 @@
       margin: 0;
     }
 
-    background: #111 url("/assets/biscuit_banner.svg");
+    background: #111 linear-gradient(45deg, #222 0%, #111 100%);
+    @if $theme == "pink" {
+      background: #111 linear-gradient(45deg, #fdbaba 0%, #E89693 100%);
+    }
     background-size: cover;
+
     color: white;
     text-shadow: 0 0 0.5em #00000090;
     padding: 20px 0;
@@ -20,11 +24,11 @@
       }
     }
 
-    &.fulptube {
-      background: #d90808 url("/assets/biscuit_banner_fulp.svg");
+    background: #111 linear-gradient(45deg, #222 0%, #111 100%);
+    @if $theme == "pink" {
+      background: #111 linear-gradient(45deg, #fdbaba 0%, #E89693 100%);
     }
 
-    background: #111 url("/assets/biscuit_banner.svg");
     background-size: cover;
     color: white;
     text-shadow: 0 0 0.5em #00000090;
