cubicle improvements + add classic theme

--- a/private/skins/biscuit/templates/_layout_profile.twig
+++ b/private/skins/biscuit/templates/_layout_profile.twig
@@ -14,7 +14,9 @@
 {% endblock %}
 
 {% block precontent %}
+    {% if current_theme not in ["classic", "cubicle"] %}
     <div class="jumbotron profile-banner"></div>
+    {% endif %}
     <div class="profile-intro">
         <div class="page">
             <div class="page-contents">
