--- a/private/skins/biscuit/templates/components/cubicle/header.twig
+++ b/private/skins/biscuit/templates/components/cubicle/header.twig
@@ -5,25 +5,29 @@
 {% endif %}
 
 <div class="headers">
-    <div class="header">
-        <div class="header-container">
+    <div class="cubicle-header">
+        <div class="cubicle-header-container">
             <div class="header-logo">
                 <a href="/">
                     <img alt="{{ website_branding.name }}" class="logo" src="{{ logo }}">
                     <img alt="{{ website_branding.name }}" class="logo-small" src="{{ website_branding.assets_location }}/logo.png">
                 </a>
             </div>
-            <div class="header-main-links">
+            <form class="header-search-cubicle" action="/search">
+                <input id="header-search-input" type="text" name="query" placeholder="{{ localize('search') }}...">
+                <button id="header-search-button" class="button button-secondary">
+                    Search
+                </button>
+            </form>
+            <div class="header-links">
                 {% for link in header_main_links() %}
                     <a class="menulink" href="{{ link.url }}">{{ link.name }}</a>
                 {% endfor %}
             </div>
-            <form class="header-search" action="/search">
-                <input id="header-search-input" type="text" name="query" placeholder="{{ localize('search') }}...">
-                <button id="header-search-button">
-                    <i class="bi bi-search"></i>
-                </button>
-            </form>
+        </div>
+    </div>
+    <div class="header">
+        <div class="header-container">
             <div class="header-links">
                 {% if is_user_logged_in %}
                     <!--<a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>-->
