--- a/scss/biscuit/biscuit/_login_register_page.scss
+++ b/scss/biscuit/biscuit/_login_register_page.scss
@@ -1,5 +1,5 @@
 body.login {
-  background: url("/assets/biscuit_login_background.jpg");
+  background: #333 url("/assets/biscuit_login_background.jpg") fixed;
   background-size: cover;
   display: flex;
   align-items: center;
