--- a/scss/biscuit/biscuit/_profile_page.scss
+++ b/scss/biscuit/biscuit/_profile_page.scss
@@ -65,7 +65,9 @@
 }
 
 .profile-intro {
-  margin-top: -75px;
+  @if $theme != "cubicle" and $theme != "classic" {
+    margin-top: -75px;
+  }
 
   .page-contents {
     margin: auto;
