--- a/scss/biscuit/biscuit/_header.scss
+++ b/scss/biscuit/biscuit/_header.scss
@@ -1,15 +1,32 @@
 .headers {
-  position: sticky;
+  @if $theme == "cubicle" or $theme == "classic" {
+    position: static;
+  } @else {
+    position: sticky;
+  }
+
+  @if $theme == "classic" {
+    margin-top: 12px;
+  }
+
   top: 0;
   z-index: 47101;
 }
 
+.header-main-links {
+  display: flex;
+  gap: 0.85em;
+}
+
+// actually known as user links, but back in 2023 the main browse/members links were aligned to the right so
+// thats why this is called header-links.
 .header-links
 {
   text-align: right;
   margin-left: auto;
   display: flex;
   align-items: center;
+  gap: 0.85em;
 
   .user-menu-container {
     direction: rtl;
@@ -51,7 +68,7 @@
         display: inline-block;
         font-size: 10px;
         color: rgba(255, 255, 255, 0.75);
-        @if $theme == "pink" {
+        @if $theme == "pink" or $theme == "classic" {
           color: rgba(0, 0, 0, 0.75);
         }
       }
@@ -63,7 +80,16 @@
 {
   a {
     display: block;
-    height: $header-logo-height;
+    @if $theme == "cubicle" or $theme == "classic" {
+      @include responsive('tiny') {
+        height: $header-logo-height;
+      }
+      @include responsive('medium') {
+        height: 40px;
+      }
+    } @else {
+      height: $header-logo-height;
+    }
 
     &:focus {
       outline: none;
@@ -77,7 +103,11 @@
     @include responsive('medium') {
       display: inline;
     }
-    height: $header-logo-height;
+    @if $theme == "cubicle" or $theme == "classic" {
+      height: 40px;
+    } @else {
+      height: $header-logo-height;
+    }
   }
 
   .logo-small {
@@ -90,7 +120,9 @@
     height: $header-logo-height;
   }
 
-  margin-right: 10px;
+  @if $theme != "cubicle" and $theme != "classic" {
+    margin-right: 10px;
+  }
 }
 
 form.header-search
@@ -98,47 +130,52 @@ form.header-search
   position: relative;
   display: none;
 
-  #header-search-button {
-    position: absolute;
-    right: 0;
+  @if $theme != "cubicle" and $theme != "classic" {
+    #header-search-button {
+      position: absolute;
+      right: 0;
 
-    background: none;
-    border: none;
+      background: none;
+      border: none;
 
-    color: #B4B4B4;
+      color: #B4B4B4;
 
-    height: 30px;
-    width: 34px;
+      height: 30px;
+      width: 34px;
 
-    &:hover {
-      cursor: pointer;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
   #header-search-input {
-    border: 1px solid black;
-    color: #eee;
-    background: #575757;
-    box-shadow: 0 1px 0 #333;
-    padding: 6px 40px 6px 6px;
-    height: 30px;
-
-    @if $theme == "pink" {
-      background: #ffe0e0;
-      border: #ff7c7c solid 1px;
-      color: #444;
-      box-shadow: none;
-    }
-
-    &:focus {
-      background: #eee;
-      color: #222;
-      box-shadow: 0 1px 0 #ff6d6d;
+    @if $theme != "cubicle" and $theme != "classic" {
       @if $theme == "pink" {
         background: #ffe0e0;
         border: #ff7c7c solid 1px;
-        box-shadow: #ff6d6d 0 1px 5px;
-        color: #111;
+        color: #444;
+        box-shadow: none;
+      } @else {
+        border: 1px solid black;
+        color: #eee;
+        background: #575757;
+        box-shadow: 0 1px 0 #333;
+        padding: 6px 40px 6px 6px;
+        height: 30px;
+      }
+
+      &:focus {
+        @if $theme == "pink" {
+          background: #ffe0e0;
+          border: #ff7c7c solid 1px;
+          box-shadow: #ff6d6d 0 1px 5px;
+          color: #111;
+        } @else {
+          background: #eee;
+          color: #222;
+          box-shadow: 0 1px 0 #000;
+        }
       }
     }
   }
@@ -156,7 +193,9 @@ form.header-search
   }
   @include responsive('medium') {
     display: block;
-    margin-left: 15px;
+    @if $theme != "cubicle" {
+      margin-left: 15px;
+    }
     max-width: 300px;
 
     #header-search-input {
@@ -176,12 +215,18 @@ td.h
 
 .menulink
 {
-  color: white;
-  margin: 0 6px;
-  font-weight: bold;
-
   @if $theme == "pink" {
     color: black;
+  } @else {
+    color: white;
+  }
+
+  @if $theme == "cubicle" {
+    font-size: 16px;
+  }
+
+  @if $theme != "classic" {
+    font-weight: bold;
   }
 
   &.username {
@@ -202,40 +247,32 @@ td.h
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
-    margin: auto;
+    margin: 0 auto;
+    @if $theme == "cubicle" {
+      background: #4e9a06;
+      font-family: "Trebuchet MS", $font;
+      border-radius: 20px 20px 0 0;
+      padding: 0 20px;
+    } @else if $theme == "classic" {
+      background: linear-gradient(to bottom, #858585, #202020);
+      border-radius: 5px 5px 0 0;
+    }
   }
 
   width: 100%;
-  background: linear-gradient(to bottom, #333, #111);
-  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
-
-  @if $theme == "cubicle" {
-    background: #4e9a06;
-    font-family: "Trebuchet MS", $font;
-  }
 
   @if $theme == "pink" {
     background: linear-gradient(to bottom, #ffc2c2, #FF9A9A);
+  } @elseif $theme == "cubicle" or $theme == "classic" {
+    background: none;
+    box-shadow: none;
+  } @else {
+    background: linear-gradient(to bottom, #333, #111);
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
   }
 
   height: $header-height;
   display: flex;
-}
-
-// SOOS
-.subheader {
-  height: 23px;
-  background: linear-gradient(to bottom, #E8E8E8, #D3D3D3);
-  display: flex;
-  .subheader-container {
-    @include maxwidths();
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    flex-wrap: wrap;
-    width: 100%;
-    margin: auto;
-  }
 }
 
 .menu#user-menu {
@@ -262,5 +299,37 @@ td.h
       background: rgba(white, 0.1);
       text-decoration: none;
     }
+  }
+}
+
+// SOOS
+.subheader {
+  height: 23px;
+  background: linear-gradient(to bottom, #E8E8E8, #D3D3D3);
+  display: flex;
+  .subheader-container {
+    @include maxwidths();
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
+  }
+}
+
+// CUBICLE AND CLASSIC
+.cubicle-header {
+  padding: 5px 0;
+  color: white;
+  .cubicle-header-container {
+    @include maxwidths();
+    padding: 0;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
   }
 }
