--- a/scss/biscuit/biscuit/_imports.scss
+++ b/scss/biscuit/biscuit/_imports.scss
@@ -29,11 +29,15 @@ $bootstrap-icons-font-dir: "/assets" !default;
 
 body
 {
-  //@if $theme == "cubicle" {
-  //  background: #333333
-  //} @else {
+  @if $theme == "cubicle" {
+    background: #333 url("/assets/biscuit_login_background.jpg") fixed;
+    background-size: cover;
+  } @elseif $theme == "classic" {
+    background: #EAEAEA;
+  } @else {
     background: #F5F5F5;
-  //}
+  }
+
   color: #333;
   font-size: small;
   padding: 0;
