--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -48,7 +48,7 @@
                         <div class="jumbotron-logged-in">
                             <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
                             <div class="jumbotron-logged-in-text">
-                                <h1>{{ localize('welcome_logged_in', website_branding.name, user_data.title) }}</h1>
+                                <h1>{{ localize('welcome_logged_in', user_data.title) }}</h1>
                                 <p>@{{ user_data.name }}</p>
                                 <p>{{ followersText }} follower{{ pluralSubscribers }}
                                     • {{ viewsText }} view{{ pluralViews }}</p>
