--- a/private/skins/finalium/templates/index.twig
+++ b/private/skins/finalium/templates/index.twig
@@ -18,7 +18,7 @@
         {% if current_theme == 'qobo' %}
             <div class="container sb-welcome">
                 {% if is_user_logged_in %}
-                    <h1>{{ localize('welcome_logged_in', website_branding.name, user_data.title) }}</h1>
+                    <h1>{{ localize('welcome_logged_in_finalium', website_branding.name, user_data.title) }}</h1>
                     <p>{{ data.totals.followers ?? "no" }} follower{{ pluralSubscribers }} - {{ data.totals.views ?? "no" }} view{{ pluralViews }}</p>
                 {% else %}
                     <h1>{{ localize('welcome_logged_out', website_branding.name) }}</h1>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="col-md-14" style="width:83.3333333333%;">
                         <p class="text-start">
-                        </p><h1 style="padding:0;margin:8px 0;">{{ localize('welcome_logged_in_beta', user_data.title) }}</h1>
+                        </p><h1 style="padding:0;margin:8px 0;">{{ localize('welcome_logged_in_finalium_beta', user_data.title) }}</h1>
                         <h3 style="padding:0;margin:8px 0;">@{{ user_data.name }}</h3>
                         <p style="padding:0;margin:8px 0;">{{ data.totals.followers ?? "no" }} follower{{ pluralSubscribers }}
                             • {{ data.totals.views ?? "no" }} view{{ pluralViews }}</p>
