--- a/private/skins/biscuit/templates/components/default/footer.twig
+++ b/private/skins/biscuit/templates/components/default/footer.twig
@@ -4,6 +4,13 @@
             {% if areWeRunningTheNewCode %}
                 <div>Running <a href="/version">OpenSB Theseus</a></div>
                 <span>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</span>
+                {% if feature_flags.Footer_Show_Chaziz_Logo %}
+                    <div class="footer-logo-chaziz">
+                        <a href="https://bluffingo.net/">
+                            <img src="/assets/sb_branding/chaziz.svg" alt="Chaziz">
+                        </a>
+                    </div>
+                {% endif %}
             {% else %}
                 <div>Running <a href="/version">OpenSB {{ opensb_version }}</a></div>
                 <span><a href="/theme">Change theme</a></span>
