fix padding-related eyesore on "random uploads" content box

--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -80,7 +80,7 @@
                     <h2>{{ localize('random_uploads') }}</h2>
                     <a href="/browse">{{ localize('more') }}</a>
                 </div>
-                <div class="content-box">
+                <div class="content-box no-side-padding">
                     <section class="splide" id="splide1" aria-labelledby="carousel-heading">
                         <div class="splide__track">
                             <ul class="splide__list">
