make theme page remember the current skin/theme

--- a/private/skins/biscuit/templates/theme.twig
+++ b/private/skins/biscuit/templates/theme.twig
@@ -21,9 +21,12 @@
                         <select id="theme" name="theme" class="form-submit" onchange="updatePreview()">
                             {% for skin in skins %}
                                 {% for theme in skin.metadata.themes %}
-                                    <option value="{{ skin.metadata.id }},{{ theme.id }}"
+                                    {% set skin_theme_value = skin.metadata.id ~ ',' ~ theme.id %}
+                                    <option value="{{ skin_theme_value }}"
                                             data-preview-url="/assets/previews/{{ skin.metadata.id }}_{{ theme.id }}.png"
-                                            data-description="{{ theme.description }}" data-author="{{ theme.author }}">
+                                            data-description="{{ theme.description }}"
+                                            data-author="{{ theme.author }}"
+                                            {% if skin_theme_value == current_skin_and_theme %} selected{% endif %}>
                                         {{ skin.metadata.name }}: {{ theme.name }}
                                     </option>
                                 {% endfor %}
