--- a/private/skins/bootstrap/templates/theme.twig
+++ b/private/skins/bootstrap/templates/theme.twig
@@ -17,9 +17,12 @@
                 <select id="theme" name="theme" onchange="updatePreview()" class="form-control">
                     {% for skin in skins %}
                         {% for theme in skin.metadata.themes %}
-                            <option value="{{ skin.metadata.id }},{{ theme.id }}"
+                            {% set skin_theme_value = skin.metadata.id ~ ',' ~ theme.id %}
+                            <option value="{{ skin_theme_value }}"
                                     data-preview-url="/assets/previews/{{ skin.metadata.id }}_{{ theme.id }}.png"
-                                    data-description="{{ theme.description }}" data-author="{{ theme.author }}">
+                                    data-description="{{ theme.description }}"
+                                    data-author="{{ theme.author }}"
+                                    {% if skin_theme_value == current_skin_and_theme %} selected{% endif %}>
                                 {{ skin.metadata.name }}: {{ theme.name }}
                             </option>
                         {% endfor %}
