--- a/private/skins/biscuit/scss/biscuit/_imports.scss
+++ b/private/skins/biscuit/scss/biscuit/_imports.scss
@@ -2,7 +2,7 @@
 
 // bootstrap icons
 $bootstrap-icons-font-dir: "/assets" !default;
-@import "../../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
+@import "../../../../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
 
 @import 'mixins/responsiveness';
 @import 'mixins/gradients';
