--- a/private/skins/finalium/scss/finalium.scss
+++ b/private/skins/finalium/scss/finalium.scss
@@ -9,7 +9,7 @@
 
 // bootstrap icons
 $bootstrap-icons-font-dir: "/assets" !default;
-@import "../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
+@import "../../../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
 
 /* SB CSS STARTS HERE ======================================================== */
 
