cheeserox logo + misc shit

--- a/private/skins/biscuit/scss/biscuit/_variables.scss
+++ b/private/skins/biscuit/scss/biscuit/_variables.scss
@@ -67,7 +67,7 @@ $button-padding-huge: 0.5em 1em;
 
 // content boxes
 $content-box-background-color: #FFF;
-$content-box-border-color: darken($secondary, 7.5%);
+$content-box-border-color: #DDD;
 $content-box-padding: 12px;
 
 // header
